<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/search"/>
    <item
        android:id="@+id/favorites_item"
        android:title="@string/favorites"
        android:icon="@drawable/ic_favorite_grey_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/sign_out_item"
        android:title="@string/sign_out"
        app:showAsAction="never" />
    <item
        android:id="@+id/settings_item"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />


</menu>
