<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/search_food_id_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="24sp"
        android:layout_centerVertical="true"
        android:text="@string/food_id" />

    <TextView
        android:id="@+id/holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:textSize="24sp"
        android:layout_centerVertical="true"
        android:text="@string/semicolon" />

    <TextView
        android:id="@+id/search_food_name_TV"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/name_of_food" />

    <TextView
        android:id="@+id/search_allergies_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:text="@string/allergies" />

</RelativeLayout>